<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ids.androidsong.ui.NuevaCancion"
    tools:showIn="@layout/activity_nueva_cancion">

    <Button
        android:id="@+id/cancion_pre_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="GuardarCancion"
        android:text="@string/nueva_cancion_guardar"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/nueva_cancion_validacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancion_pre_guardar"
        android:text="Prueba"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:visibility="visible"
        tools:background="@color/common_google_signin_btn_text_light_default"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_above="@id/cancion_pre_guardar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Carpeta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/nueva_cancion_carpeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:backgroundTint="@android:color/transparent"
                    android:elevation="0dp"
                    android:onClick="agregarCarpeta"
                    app:srcCompat="@android:drawable/ic_menu_add" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Título" />

            <EditText
                android:id="@+id/nueva_cancion_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="Autor/Intérprete" />

            <EditText
                android:id="@+id/nueva_cancion_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Letra" />

            <EditText
                android:id="@+id/nueva_cancion_letra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/hint_editar_cancion"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Presentación" />

            <EditText
                android:id="@+id/nueva_cancion_presentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Lista las secciones en el orden correcto."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tono original" />

            <EditText
                android:id="@+id/nueva_cancion_tono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TCapo/Transporte" />

            <EditText
                android:id="@+id/nueva_cancion_transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="..."
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
