<resources>
    <string name="app_name">AndroidSong</string>
    <string name="title_activity_ancestor">AndroidSong</string>
    <string name="title_activity_principal">AndroidSong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ErrorGenerico">Error! Acción no ejecutada</string>
    <string name="title_cancionmusico_list">Canciones</string>
...
    <string name="title_activity_nueva_cancion">Nueva Canción</string>

    <string name="title_activity_fullscreen_cancion">Cancion</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint_editar_cancion">Inicia con un \'.\' para lineas de acordes, o usa el botón \'[S]\' para dividir secciones/estrofas.</string>
    <string name="nueva_cancion_guardar">Guardar</string>
    <string name="title_activity_importador">Importar</string>
    <string name="title_activity_sincronizar">Sincronizar con Drive</string>
    <string name="title_activity_papelera">Papelera</string>
    <string name="title_activity_atributos">Atributos</string>
    <string name="Error_con_Drive">No se pudo conectar a Drive</string>
    <string name="Error_sin_red">Conexión a internet no disponible.</string>
...
